--- a/streamlit_frontend/requirements.txt
+++ b/streamlit_frontend/requirements.txt
@@ -15,6 +15,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
+lxml==5.1.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
@@ -26,7 +27,9 @@ protobuf==4.25.3
 pyarrow==15.0.0
 pydeck==0.8.1b0
 Pygments==2.17.2
+PyPDF2==3.0.1
 python-dateutil==2.8.2
+python-docx==1.1.0
 python-dotenv==1.0.1
 pytz==2024.1
 referencing==0.33.0
